@@ -1,5 +1,5 @@
 /*
- * Copyright 2013 - 2023 The Original Authors
+ * Copyright 2013 - 2025 The Original Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -40,7 +40,7 @@ import static org.apache.kafka.common.config.TopicConfig.RETENTION_MS_CONFIG;
 import static org.apache.kafka.common.config.TopicConfig.SEGMENT_MS_CONFIG;
 
 public final class TopicHelper {
-    private static final Short DEFAULT_REPLICATION_FACTOR = new Short("3");
+    private static final Short DEFAULT_REPLICATION_FACTOR = Short.valueOf("3");
 
     private TopicHelper() {
 
